k8s/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "3"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"flask-api","namespace":"flask-app"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"flask-api"}},"template":{"metadata":{"labels":{"app":"flask-api"}},"spec":{"containers":[{"env":[{"name":"DATABASE_HOST","value":"postgres-db"},{"name":"DATABASE_PORT","value":"5432"},{"name":"DATABASE_NAME","value":"postgres"},{"name":"DATABASE_USER","value":"postgres"},{"name":"DATABASE_PASSWORD","value":"postgres"}] [...]
    creationTimestamp: "2026-07-18T09:50:05Z"
    generation: 4
    name: flask-api
    namespace: flask-app
    resourceVersion: "142786"
    uid: cf44f73b-423c-469b-adbc-cca1cf240479
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: flask-api
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        annotations:
          kubectl.kubernetes.io/restartedAt: "2026-07-20T09:53:25Z"
        labels:
          app: flask-api
      spec:
        containers:
        - env:
          - name: DATABASE_HOST
            value: postgres-db
          - name: DATABASE_PORT
            value: "5432"
          - name: DATABASE_NAME
            value: postgres
          - name: DATABASE_USER
            value: postgres
          - name: DATABASE_PASSWORD
            value: postgres
          image: ghcr.io/ipshitachaudhuri/flask-api:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 20
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          name: flask-api
          ports:
          - containerPort: 8000
            protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-07-20T10:08:45Z"
      lastUpdateTime: "2026-07-20T10:08:45Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    - lastTransitionTime: "2026-07-18T09:50:05Z"
      lastUpdateTime: "2026-07-20T10:08:58Z"
      message: ReplicaSet "flask-api-6bcff5dffb" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    observedGeneration: 4
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"postgres-db","namespace":"flask-app"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"postgres-db"}},"template":{"metadata":{"labels":{"app":"postgres-db"}},"spec":{"containers":[{"env":[{"name":"POSTGRES_DB","value":"postgres"},{"name":"POSTGRES_USER","value":"postgres"},{"name":"POSTGRES_PASSWORD","value":"postgres"}],"image":"postgres:16","name":"postgres","ports":[{"containerPort":5432}],"volumeMo [...]
    creationTimestamp: "2026-07-20T10:11:25Z"
    generation: 1
    name: postgres-db
    namespace: flask-app
    resourceVersion: "142968"
    uid: c2030509-6ade-457c-af87-dcb2bf2d3630
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: postgres-db
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: postgres-db
      spec:
        containers:
        - env:
          - name: POSTGRES_DB
            value: postgres
          - name: POSTGRES_USER
            value: postgres
          - name: POSTGRES_PASSWORD
            value: postgres
          image: postgres:16
          imagePullPolicy: IfNotPresent
          name: postgres
          ports:
          - containerPort: 5432
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: postgres-storage
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-07-20T10:11:25Z"
      lastUpdateTime: "2026-07-20T10:11:26Z"
      message: ReplicaSet "postgres-db-f844dd76d" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-07-20T10:17:51Z"
      lastUpdateTime: "2026-07-20T10:17:51Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 1
    readyReplicas: 1
    replicas: 1
    terminatingReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
