k8s/ingress-backup.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"networking.k8s.io/v1","kind":"Ingress","metadata":{"annotations":{"nginx.ingress.kubernetes.io/rewrite-target":"/"},"name":"flask-api-ingress","namespace":"flask-app"},"spec":{"ingressClassName":"nginx","rules":[{"host":"flask-api.local","http":{"paths":[{"backend":{"service":{"name":"flask-api","port":{"number":8000}}},"path":"/","pathType":"Prefix"}]}}]}}
      nginx.ingress.kubernetes.io/rewrite-target: /
    creationTimestamp: "2026-07-20T10:29:21Z"
    generation: 1
    name: flask-api-ingress
    namespace: flask-app
    resourceVersion: "143654"
    uid: ba5c65f2-9135-4169-b6d7-6a5098a89440
  spec:
    ingressClassName: nginx
    rules:
    - host: flask-api.local
      http:
        paths:
        - backend:
            service:
              name: flask-api
              port:
                number: 8000
          path: /
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 192.168.49.2
kind: List
metadata:
  resourceVersion: ""
